--- a/Vacaciones/stylecd.css
+++ b/Vacaciones/stylecd.css
@@ -19,7 +19,7 @@ canvas {
 
 body {
   background: #000000;
-  background-image: url("https://i.imgur.com/wJ7RHVX.jpg");
+  background-image: url("https://i.imgur.com/nEPM2Nc.png");
   background-position: top center;
   background-size: cover;
   color: #fff;
